; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_gpio.c_bcm_gpio_pic_pre_ithread.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_gpio.c_bcm_gpio_pic_pre_ithread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i32 }
%struct.bcm_gpio_softc = type { i32 }
%struct.bcm_gpio_irqsrc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.intr_irqsrc*)* @bcm_gpio_pic_pre_ithread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcm_gpio_pic_pre_ithread(i32 %0, %struct.intr_irqsrc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intr_irqsrc*, align 8
  %5 = alloca %struct.bcm_gpio_softc*, align 8
  %6 = alloca %struct.bcm_gpio_irqsrc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.intr_irqsrc* %1, %struct.intr_irqsrc** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.bcm_gpio_softc* @device_get_softc(i32 %7)
  store %struct.bcm_gpio_softc* %8, %struct.bcm_gpio_softc** %5, align 8
  %9 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %4, align 8
  %10 = bitcast %struct.intr_irqsrc* %9 to %struct.bcm_gpio_irqsrc*
  store %struct.bcm_gpio_irqsrc* %10, %struct.bcm_gpio_irqsrc** %6, align 8
  %11 = load %struct.bcm_gpio_softc*, %struct.bcm_gpio_softc** %5, align 8
  %12 = load %struct.bcm_gpio_irqsrc*, %struct.bcm_gpio_irqsrc** %6, align 8
  %13 = call i32 @bcm_gpio_isrc_mask(%struct.bcm_gpio_softc* %11, %struct.bcm_gpio_irqsrc* %12)
  %14 = load %struct.bcm_gpio_irqsrc*, %struct.bcm_gpio_irqsrc** %6, align 8
  %15 = call i64 @bcm_gpio_isrc_is_level(%struct.bcm_gpio_irqsrc* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load %struct.bcm_gpio_softc*, %struct.bcm_gpio_softc** %5, align 8
  %19 = load %struct.bcm_gpio_irqsrc*, %struct.bcm_gpio_irqsrc** %6, align 8
  %20 = call i32 @bcm_gpio_isrc_eoi(%struct.bcm_gpio_softc* %18, %struct.bcm_gpio_irqsrc* %19)
  br label %21

21:                                               ; preds = %17, %2
  ret void
}

declare dso_local %struct.bcm_gpio_softc* @device_get_softc(i32) #1

declare dso_local i32 @bcm_gpio_isrc_mask(%struct.bcm_gpio_softc*, %struct.bcm_gpio_irqsrc*) #1

declare dso_local i64 @bcm_gpio_isrc_is_level(%struct.bcm_gpio_irqsrc*) #1

declare dso_local i32 @bcm_gpio_isrc_eoi(%struct.bcm_gpio_softc*, %struct.bcm_gpio_irqsrc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
